--- a/acsets/css/style.css
+++ b/acsets/css/style.css
@@ -6,6 +6,7 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 * {
+    scroll-behavior: smooth;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -17,6 +18,7 @@ h1 {
     text-align: center;
     color: aqua;
     padding: 16px 0;
+    user-select: none;
 }
 .backgroundDay1 {
     background-image: linear-gradient(to right,#4daf54, #3d8880);
@@ -225,6 +227,7 @@ h1 {
     background: #242628;
     color: #fff;
     transition: 0.25s;
+    cursor: pointer;
 }
 .cardProfile__contact button:hover {
     background-color: var(--color-Mainday2);
@@ -237,3 +240,98 @@ h1 {
     transform: unset;
     
 }
+/* ============================================== Day 03 ================================================== */
+.backgroundDay3 {
+    background-image: linear-gradient( 45deg, rgb(65, 88, 208) 0%, rgb(200, 80, 192) 50%, rgb(255, 204, 112) 100% );
+    width: 100%;
+    height:625px;
+}
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999999;
+    background-color: rgba(0,0,0,0.25);
+}
+.modal-container {
+    width: 450px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+    overflow: hidden;
+    animation: modalShow 0.25s linear;
+
+}
+.modal__header {
+    display: flex;
+    height:50px ;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    background-color: #e26e70;
+    color: #fff;
+    font-size: 18px;
+
+}
+.modal__header i{
+    cursor: pointer;
+    user-select: none;
+}
+.modal__content {
+    margin: 10px 16px;
+}
+.modal__content h2{
+    color: #e26e70;
+    font-size: 25px;
+    margin-bottom: 12px;
+}
+.modal__footer {
+    margin: 18px 16px;
+    text-align: right;
+
+}
+.modal__footer button{
+    padding: 5px 16px;
+    border-radius: 8px;
+    border: none;
+    background-color: #e26e70;
+    cursor: pointer;
+    user-select: none;
+}
+.modalHide {
+    display: none;
+}
+.openModalBtn {
+    text-align: center;
+    position: relative;
+    top: 40%;
+    transform: translateY(-50%);
+}
+.openModalBtn button{
+    background-color: #fff;
+    border: none;
+    border-radius: 8px;
+    color: #000;
+    font-size: 18px;
+    padding: 10px 18px;
+    cursor: pointer;
+    user-select: none;
+}
+@keyframes modalShow {
+    0% {
+        top:-200px;
+        opacity: 0;
+    }
+    100% {
+        top: 50%;
+        opacity: 1;
+
+    }
+}
+
+/* =============================== Day 04 ================================================= */
