--- a/acsets/css/style.css
+++ b/acsets/css/style.css
@@ -335,3 +335,96 @@ h1 {
 }
 
 /* =============================== Day 04 ================================================= */
+.backgroundDay4 {
+    width: 100%;
+    height:625px;
+    background-color: #dadada;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.galleryImgs {
+    margin: auto 0;
+    width: 1200px;
+    flex-direction: row;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+.imageItem {
+    width: 22%;
+    margin: 16px 0;
+}
+.imageItem img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 8px;
+    transition: 0.25s linear;
+}
+.imageItem:hover img{
+    transform: scale(1.2);
+}
+.gallerryShow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999999;
+    background-color: rgba(0,0,0,0.8);
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(0.8);
+    transition: 0.25s linear;
+}
+.gallerryShow-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.gallerryShow-content {
+    width: 70%;
+    height: 70%;
+    margin: auto;
+    align-self: center;
+    overflow: hidden;
+}
+.gallerryShow-content img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    user-select: none;
+        
+}
+.close,.btnleft,.btnright {
+    color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    font-size: 35px;
+    cursor: pointer;
+}
+.btnleft i,.btnright i{
+    user-select: none;
+}
+.close {
+    top: 15px;
+    right: 25px;
+    user-select: none;
+}
+.btnleft {
+    user-select: none;
+    left: 25px;
+}
+.btnright {
+    user-select: none;
+    right: 25px;
+}
+.showGallery {
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
+
+}
