--- a/acsets/css/style.css
+++ b/acsets/css/style.css
@@ -428,3 +428,122 @@ h1 {
     transform: scale(1);
 
 }
+/* ========================== Day 05 ===================================== */
+.backgroundDay5 {
+    width: 100%;
+    height:625px;
+    background-image: linear-gradient(to right, #4daf54, #3d8880);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.searchBox {
+    position: relative;
+    border-radius: 8px;
+
+    width: 70px;
+    height: 70px;
+    background-color: #242628;
+    overflow: hidden;
+    transition: 0.25s linear ;
+
+}
+.searchBtn {
+    width: 70px;
+    height: 70px;
+    border: none;
+    outline: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    user-select: none;
+}
+.searchBtn i{
+    font-size: 24px;
+}
+.searchInput {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    padding: 20px 100px 20px 20px;
+    color: #fff;
+    font-size: 28px;
+    outline: none;
+}
+.openSearchBox {
+    width: 400px !important;
+}
+/* ===================================================================== */
+.backgroundDay6 {
+    background-color: #17A2B8;
+    width: 100%;
+    height:625px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+.alertBackground {
+    color: #17A2B8;
+    background-color: #fff;
+    padding: 10px 20px ;
+    border-radius: 8px;
+    font-size: 35px;
+    user-select: none;
+    
+}
+.hideAlert {
+    display: none;
+}
+.cricleBox {
+    width: 200px;
+    height: 200px;
+    border: 6px solid #fff;
+    border-radius: 50%;
+    color: #fff;
+    text-align: center;
+    line-height: 200px;
+    font-size: 60px;
+    margin: 0 auto;
+    user-select: none;
+}
+.contentKey {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.contentKey__code,.contentKey__key,.contentKey__location,.contentKey__which{
+    width: 200px;
+    height: 100px;
+    border-radius: 8px;
+    overflow: hidden;
+    user-select: none;
+    margin: 64px  20px 0px;
+}
+.contentKeyName {
+    color: #fff;
+    height: 50px;
+    width: 100%;
+    background-color: #78C0C9;
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    
+}
+.contentKey__codeContent,.contentKey__locationContent,.contentKey__whichContent,.contentKey__keycontent {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px;
+    background-color: #fff;
+    color: #000;
+    height: 50px;
+}
+.contentKey__keycontent {
+    text-transform: uppercase;
+}
+.detectPressKey {
+    display: none;
+}
